[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-sleuth"
version = "0.1.0"
description = "Memory optimization insights generator for code analysis"
authors = [{name = "Axentx", email = "team@axentx.com"}]
dependencies = []

[project.scripts]
memory-sleuth = "memory_sleuth:main"

[tool.hatch.build.targets.wheel]
packages = ["memory_sleuth"]
